# AdventOfCode

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  conanfile.txt
.github/workflows/: ci.yml
2022/: CMakeLists.txt
2022/source/: CMakeLists.txt  main.cpp
2022/source/days/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  dayXX.cpp  days.hpp
2022/src/: main.cpp
2022/src/common/: grid.hpp  point.hpp  string_utils.cpp  string_utils.hpp
2022/src/days/: day02.cpp  day04.cpp  day07.cpp  day08.cpp  day09.cpp  day11.cpp  day15.cpp  day16.cpp  days.hpp
2022/test/: CMakeLists.txt  test_day01.cpp  test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp  test_day06.cpp  test_day07.cpp  test_day08.cpp  test_day09.cpp  test_day10.cpp  test_day11.cpp  test_day12.cpp  test_day13.cpp  test_day14.cpp  test_day15.cpp  test_day16.cpp
2023/: CMakeLists.txt
2023/source/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  days.hpp  main.cpp
2023/test/: CMakeLists.txt  test_day01.cpp  test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp  test_day06.cpp  test_day07.cpp  test_day08.cpp  test_day09.cpp  test_day10.cpp  test_day11.cpp  test_day12.cpp  test_day13.cpp  test_day14.cpp  test_day15.cpp  test_day16.cpp  test_day19.cpp  test_day20.cpp  test_day21.cpp
2024/: CMakeLists.txt
2024/source/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  main.cpp
2024/test/: CMakeLists.txt  test_day01.cpp  test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp
aoclib/: CMakeLists.txt
aoclib/include/bblp/aoc/: application.hpp  file_utils.hpp  grid.hpp  point.hpp  point_io.hpp  string_utils.hpp
aoclib/source/: CMakeLists.txt  application.cpp  file_utils.cpp  string_utils.cpp
src/: CMakeLists.txt  main.cpp
src/common/: file_utils.cpp  file_utils.hpp  grid.hpp  point.hpp  string_utils.cpp  string_utils.hpp
src/day01/: day01.cpp  day01.hpp
src/day02/: day02.cpp  day02.hpp
src/days/: day01.cpp  day02.cpp  day02.hpp  day03.cpp  day03.hpp  day04.cpp  day05.cpp  day06.cpp  day08.cpp  day10.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  dayXX.cpp  days.hpp
test/: CMakeLists.txt  main.cpp  test_day01.cpp  test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp  test_day07.cpp  test_day09.cpp  test_day13.cpp  test_day16.cpp
