set(AOC_2022_BASE_NAME "aoc2022")
set(AOC_2022_LIB_NAME "lib${AOC_2022_BASE_NAME}")
set(AOC_2022_EXEC_NAME ${AOC_2022_BASE_NAME})
set(AOC_2022_TEST_NAME "${AOC_2022_BASE_NAME}_ut")
set(AOC_2022_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/source")
set(AOC_2022_RESOURCE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/resources")

add_subdirectory(source)
add_subdirectory(test)
