set(AOC_2023_BASE_NAME "aoc2023")
set(AOC_2023_LIB_NAME "lib${AOC_2023_BASE_NAME}")
set(AOC_2023_EXEC_NAME ${AOC_2023_BASE_NAME})
set(AOC_2023_TEST_NAME "${AOC_2023_BASE_NAME}_ut")
set(AOC_2023_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/source")
set(AOC_2023_RESOURCE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/resources")

add_subdirectory(source)
add_subdirectory(test)
